Added strings values

--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <!--Navigation Menu-->
+    <string name="liveData">Live Data</string>
+    <string name="simulate">Simulate</string>
+    <string name="roverSettings">Rover Settings</string>
+    <string name="logOut">Log Out</string>
+
 </resources>
