--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
 
     <!--simulate-->
     <string name="fetch">Fetch</string>
+    <string name="endSimulate">End Simulate</string>
 </resources>
