--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="simulate">Simulate</string>
     <string name="addRover">Add Rover</string>
     <string name="logOut">Log Out</string>
-
+    <string name="about">About</string>
     <!--simulate-->
     <string name="fetch">Fetch</string>
     <string name="endSimulate">End Simulate</string>
