--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -6,11 +6,14 @@
 
     <!--Navigation Menu-->
     <string name="menu">Menu</string>
+    <string name="rovers">Rovers</string>
     <string name="liveFeed">Live Feed</string>
     <string name="simulate">Simulate</string>
+
+    <string name="viewRover">View Rover</string>
     <string name="addRover">Add Rover</string>
+    <string name="deleteRover">Delete Rover</string>
     <string name="logOut">Log Out</string>
-    <string name="about">About</string>
 
     <!--simulate-->
     <string name="fetch">Fetch</string>
@@ -21,5 +24,7 @@
     <string name="roverName">Name of the rover</string>
     <string name="add_rover_dialog_message">Your rover is added to the list</string>
     <string name="add_rover_dialog_title">Added</string>
+
+    <!--Delete Rover-->
 
 </resources>
