--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="add_rover_dialog_title_fail">Already exist</string>
 
     <!--Delete Rover-->
+    <string name="clear_all">Clear rover list</string>
     <string name="delete_rover_dialog_title_success">Deleted</string>
     <string name="delete_message_add_rover_success">Your rover has been deleted !!!</string>
 
