--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -35,6 +35,10 @@
     <string name="clear_all">Clear rover list</string>
     <string name="delete_rover_dialog_title_success">Deleted</string>
     <string name="delete_rover_message_success">Your rover has been deleted !!!</string>
+    <string name="delete_rover_decision_title_rover">Delete rover</string>
+    <string name="delete_rover_decision_title_clear">Clear list</string>
+    <string name="delete_rover_decision_msg_rover">Do you want to delete this rover ?</string>
+    <string name="delete_rover_decision_msg_clear">Do you want to clear all rovers in the list ?</string>
     <string name="delete_rover_dialog_title_fail">Invalid IP</string>
     <string name="delete_rover_message_fail">IP given is not in the list !!!</string>
 </resources>
