--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -39,6 +39,9 @@
     <string name="delete_rover_decision_title_clear">Clear list</string>
     <string name="delete_rover_decision_msg_rover">Do you want to delete this rover ?</string>
     <string name="delete_rover_decision_msg_clear">Do you want to clear all rovers in the list ?</string>
+    <string name="delete_rover_dialog_title_clear">Cleared rover list</string>
+    <string name="delete_rover_dialog_msg_clear">Whole list has been removed !!!</string>
     <string name="delete_rover_dialog_title_fail">Invalid IP</string>
     <string name="delete_rover_message_fail">IP given is not in the list !!!</string>
+
 </resources>
