Make active rover added

--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <string name="active_rover">none</string>
+
     <!--Navigation Menu-->
     <string name="menu">Menu</string>
     <string name="rovers">Rovers</string>
