--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="rovers">Rovers</string>
     <string name="liveFeed">Live Feed</string>
     <string name="simulate">Simulate</string>
+    <string name="login">Login</string>
 
     <string name="viewRover">View rovers</string>
     <string name="addRover">Add Rover</string>
@@ -21,7 +22,7 @@
     <string name="fetch">Fetch</string>
     <string name="endSimulate">End Simulate</string>
 
-
+    <string name="nextSegment">Next Segment</string>
     <string name="ipAddress">IP address</string>
     <string name="roverName">Name of the rover</string>
 
